hphp/hack/test/typecheck/assignment_sequencing/binop_ww.php.exp
File "binop_ww.php", line 4, characters 9-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "binop_ww.php", line 4, characters 22-22:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "binop_ww.php", line 4, characters 9-10:
Unsequenced modifications to local variable. Modified here (Typing[4144])
File "binop_ww.php", line 4, characters 22-23:
And also modified here
