hphp/hack/test/typecheck/assignment_sequencing/binop_ww.php
<?hh

function x(int $y): string {
  $y = ($x = 'lol').($x = 'wut');
  return $x;
}
